--- a/src/Components/PrivateLayout/index.css
+++ b/src/Components/PrivateLayout/index.css
@@ -72,3 +72,82 @@
   .dropdown-list li:hover {
     background-color: #f5f5f5; /* Change background color on hover */
   }
+
+
+/* Custom CSS for dropdown container */
+.dropdown-container-notification {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  z-index: 999;
+  min-width: 350px;
+  max-width: 450px;
+  padding: 8px 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Styling for notification items */
+.notification-item {
+  display: block;
+  padding: 8px 16px;
+  
+ 
+}
+
+/* Styling for notification message */
+.notification-message {
+  color: #333;
+  
+}
+.notification-message-h3{
+  font-size: 2rem  !important;
+  font-weight: 400;
+  cursor: pointer;
+  overflow: auto;
+}
+/* Styling for empty notification */
+.empty-notification {
+  padding: 10px;
+  margin: 0;
+  color: #999;
+}
+
+
+/* Styling for online status */
+.online {
+  background-color: green;
+  color: #fff;
+  font-weight: bold;
+  padding: 3px 6px;
+  border-radius: 5px;
+  animation: blinkingBackgroundOnline 1s infinite;
+}
+
+/* Styling for offline status */
+.offline {
+  background-color: red;
+  color: #fff;
+  font-weight: bold;
+  padding: 3px 6px;
+  border-radius: 5px;
+  animation: blinkingBackground 1s infinite;
+}
+
+/* Keyframes for blinking background of offline status */
+@keyframes blinkingBackground {
+  0% { background-color: #ff0000; }
+  25% { background-color: #f30e0e; }
+  75% { background-color: #f2dede; }
+  100% { background-color: #ffffff; }
+}
+
+/* Keyframes for blinking background of online status */
+@keyframes blinkingBackgroundOnline {
+  0% { background-color: green; }
+  25% { background-color: green; }
+  75% { background-color: rgb(226, 238, 226); }
+  100% { background-color: #ffffff; }
+}
