--- a/client/src/Components/PrivateLayout/index.css
+++ b/client/src/Components/PrivateLayout/index.css
@@ -1,78 +1,93 @@
 .online {
+  background-color: green;
+  color: #fff;
+  font-weight: bold;
+  padding: 3px 6px;
+  border-radius: 5px;
+  animation: blinkingBackgroundOnline 1s infinite;
+}
+.offline {
+  background-color: red;
+  color: #fff;
+  font-weight: bold;
+  padding: 3px 6px;
+  border-radius: 5px;
+  animation: blinkingBackground 1s infinite;
+}
+@keyframes blinkingBackground {
+  0% {
+    background-color: #ff0000;
+  }
+  25% {
+    background-color: #f30e0e;
+  }
+  75% {
+    background-color: #f2dede;
+  }
+  100% {
+    background-color: #ffffff;
+  }
+}
+@keyframes blinkingBackgroundOnline {
+  0% {
     background-color: green;
-    color: #fff;
-    font-weight: bold;
-    padding: 3px 6px;
-    border-radius: 5px;
-    animation: blinkingBackgroundOnline 1s infinite;
-}
-.offline{
-    background-color: red;
-    color: #fff;
-    font-weight: bold;
-    padding: 3px 6px;
-    border-radius: 5px;
-    animation: blinkingBackground 1s infinite;
-}
-@keyframes blinkingBackground{
-    0%		{ background-color: #ff0000;}
-    25%		{ background-color: #f30e0e;}
-    75%		{ background-color: #f2dede;}
-    100%	{ background-color: #ffffff;}
-}
-@keyframes blinkingBackgroundOnline{
-  0%		{ background-color: green;}
-  25%		{ background-color: green;}
-  75%		{ background-color: rgb(226, 238, 226);}
-  100%	{ background-color: #ffffff;}
+  }
+  25% {
+    background-color: green;
+  }
+  75% {
+    background-color: rgb(226, 238, 226);
+  }
+  100% {
+    background-color: #ffffff;
+  }
 }
 /* Add styles for the dropdown toggler button */
 .navbar-toggler {
-    background-color: transparent; /* Set background color */
-    border: none; /* Remove border */
-    outline: none; /* Remove outline */
-    cursor: pointer; /* Change cursor to pointer */
-    color: #000; /* Set text color */
-  }
-  
-  /* Add styles for the dropdown menu */
-  .toggle-dropdown {
-    position: absolute; /* Position the dropdown menu */
-    top: 100%; /* Align the dropdown menu below the toggler button */
-    right: 0; /* Align the dropdown menu to the right */
-    z-index: 999; /* Set z-index to ensure it appears above other content */
-    min-width: 160px; /* Set minimum width for the dropdown menu */
-    padding: 8px 0; /* Add padding to the dropdown menu */
-    background-color: #fff; /* Set background color */
-    border: 1px solid #ccc; /* Add border */
-    border-radius: 4px; /* Add border radius */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add box shadow */
-  }
-  
-  /* Add styles for the dropdown list */
-  .dropdown-list {
-    list-style-type: none; /* Remove default list styles */
-    padding: 0; /* Remove default padding */
-    margin: 0; /* Remove default margin */
-  }
-  
-  /* Add styles for the dropdown list items */
-  .dropdown-list li {
-    padding: 8px 16px; /* Add padding to the list items */
-  }
-  
-  /* Add styles for the dropdown list links */
-  .dropdown-list li a {
-    text-decoration: none; /* Remove underline */
-    color: #333; /* Set text color */
-    display: block; /* Make links block-level elements */
-  }
-  
-  /* Add hover styles for dropdown list items */
-  .dropdown-list li:hover {
-    background-color: #f5f5f5; /* Change background color on hover */
-  }
+  background-color: transparent; /* Set background color */
+  border: none; /* Remove border */
+  outline: none; /* Remove outline */
+  cursor: pointer; /* Change cursor to pointer */
+  color: #000; /* Set text color */
+}
 
+/* Add styles for the dropdown menu */
+.toggle-dropdown {
+  position: absolute; /* Position the dropdown menu */
+  top: 100%; /* Align the dropdown menu below the toggler button */
+  right: 0; /* Align the dropdown menu to the right */
+  z-index: 999; /* Set z-index to ensure it appears above other content */
+  min-width: 160px; /* Set minimum width for the dropdown menu */
+  padding: 8px 0; /* Add padding to the dropdown menu */
+  background-color: #fff; /* Set background color */
+  border: 1px solid #ccc; /* Add border */
+  border-radius: 4px; /* Add border radius */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add box shadow */
+}
+
+/* Add styles for the dropdown list */
+.dropdown-list {
+  list-style-type: none; /* Remove default list styles */
+  padding: 0; /* Remove default padding */
+  margin: 0; /* Remove default margin */
+}
+
+/* Add styles for the dropdown list items */
+.dropdown-list li {
+  padding: 8px 16px; /* Add padding to the list items */
+}
+
+/* Add styles for the dropdown list links */
+.dropdown-list li a {
+  text-decoration: none; /* Remove underline */
+  color: #333; /* Set text color */
+  display: block; /* Make links block-level elements */
+}
+
+/* Add hover styles for dropdown list items */
+.dropdown-list li:hover {
+  background-color: #f5f5f5; /* Change background color on hover */
+}
 
 /* Custom CSS for dropdown container */
 .dropdown-container-notification {
@@ -93,17 +108,14 @@
 .notification-item {
   display: block;
   padding: 8px 16px;
-  
- 
 }
 
 /* Styling for notification message */
 .notification-message {
   color: #333;
-  
 }
-.notification-message-h3{
-  font-size: 2rem  !important;
+.notification-message-h3 {
+  font-size: 2rem !important;
   font-weight: 400;
   cursor: pointer;
   overflow: auto;
@@ -114,7 +126,6 @@
   margin: 0;
   color: #999;
 }
-
 
 /* Styling for online status */
 .online {
@@ -138,16 +149,32 @@
 
 /* Keyframes for blinking background of offline status */
 @keyframes blinkingBackground {
-  0% { background-color: #ff0000; }
-  25% { background-color: #f30e0e; }
-  75% { background-color: #f2dede; }
-  100% { background-color: #ffffff; }
+  0% {
+    background-color: #ff0000;
+  }
+  25% {
+    background-color: #f30e0e;
+  }
+  75% {
+    background-color: #f2dede;
+  }
+  100% {
+    background-color: #ffffff;
+  }
 }
 
 /* Keyframes for blinking background of online status */
 @keyframes blinkingBackgroundOnline {
-  0% { background-color: green; }
-  25% { background-color: green; }
-  75% { background-color: rgb(226, 238, 226); }
-  100% { background-color: #ffffff; }
+  0% {
+    background-color: green;
+  }
+  25% {
+    background-color: green;
+  }
+  75% {
+    background-color: rgb(226, 238, 226);
+  }
+  100% {
+    background-color: #ffffff;
+  }
 }
