--- a/client/src/Components/PrivateLayout/index.css
+++ b/client/src/Components/PrivateLayout/index.css
@@ -178,3 +178,26 @@
     background-color: #ffffff;
   }
 }
+.dropdown-container-notification {
+  max-height: 300px; /* Set the max height */
+  overflow-y: auto; /* Enable vertical scrolling */
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: #888 #fff; /* For Firefox */
+}
+
+.dropdown-container-notification::-webkit-scrollbar {
+  width: 6px;
+}
+
+.dropdown-container-notification::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.dropdown-container-notification::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+.dropdown-container-notification::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
