--- a/client/public/assets/css/demo_1/style.css
+++ b/client/public/assets/css/demo_1/style.css
@@ -531,6 +531,140 @@
     margin-top: 0.5rem;
   }
 }
+/* Apply the same styles to sub-menu items */
+.nav .nav-item,
+.navbar-nav .nav-item,
+.sub-menu .nav-item {
+  line-height: 1;
+}
+
+.nav .nav-item .nav-link,
+.navbar-nav .nav-item .nav-link,
+.sub-menu .nav-link {
+  color: inherit;
+  font-size: 15px;
+  vertical-align: middle;
+  display: flex;
+  align-items: center;
+}
+
+.nav .nav-item .nav-link i,
+.navbar-nav .nav-item .nav-link i,
+.sub-menu .nav-link i {
+  font-size: 1.25rem;
+  vertical-align: middle;
+  margin-right: 0.5rem;
+}
+
+.nav .nav-item.dropdown .dropdown-toggle:after,
+.navbar-nav .nav-item.dropdown .dropdown-toggle:after,
+.sub-menu .nav-item.dropdown .dropdown-toggle:after {
+  border: none;
+  content: "\F140";
+  font-family: "Material Design Icons";
+  font-size: 20px;
+  color: grey;
+  text-rendering: auto;
+  line-height: inherit;
+  vertical-align: 0;
+}
+
+.nav .nav-item.dropdown .count-indicator,
+.navbar-nav .nav-item.dropdown .count-indicator,
+.sub-menu .nav-item.dropdown .count-indicator {
+  position: relative;
+  text-align: center;
+}
+
+.nav .nav-item.dropdown .count-indicator i,
+.navbar-nav .nav-item.dropdown .count-indicator i,
+.sub-menu .nav-item.dropdown .count-indicator i {
+  font-size: 21px;
+  margin-right: 0;
+  vertical-align: middle;
+}
+
+.nav .nav-item.dropdown .count-indicator .count,
+.navbar-nav .nav-item.dropdown .count-indicator .count,
+.sub-menu .nav-item.dropdown .count-indicator .count {
+  position: absolute;
+  left: 50%;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 100%;
+  background: #ff0017;
+  color: #ffffff;
+  font-size: 11px;
+  top: -1px;
+  font-weight: 600;
+  line-height: 1rem;
+  border: none;
+  text-align: center;
+}
+
+.nav .nav-item.dropdown .navbar-dropdown,
+.navbar-nav .nav-item.dropdown .navbar-dropdown,
+.sub-menu .navbar-dropdown {
+  font-size: 0.9rem;
+  margin-top: 15px;
+  position: absolute;
+  right: 0;
+  left: auto;
+  border: 1px solid rgba(182, 182, 182, 0.1);
+  padding: 0 0 20px;
+  min-width: 100%;
+  border-radius: 2px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.13);
+  overflow-x: hidden;
+  max-height: 350px;
+  overflow-y: auto;
+  overflow: hidden;
+}
+
+@media (max-width: 991px) {
+  .nav .nav-item.dropdown .navbar-dropdown,
+  .navbar-nav .nav-item.dropdown .navbar-dropdown,
+  .sub-menu .navbar-dropdown {
+    right: -85px;
+  }
+}
+
+/* Sub-menu animation */
+.sub-menu {
+  -webkit-animation-name: dropdownAnimation;
+  animation-name: dropdownAnimation;
+  -webkit-animation-duration: 0.25s;
+  animation-duration: 0.25s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+/* Dropdown animation */
+@-webkit-keyframes dropdownAnimation {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes dropdownAnimation {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
 
 /* Sidebar */
 .sidebar {
