--- a/client/src/Components/PrivateLayout/index.css
+++ b/client/src/Components/PrivateLayout/index.css
@@ -243,3 +243,23 @@
   font-size: 18px;
   padding: 8px;
 }
+/* Dropdown with Submenu */
+.dropdown-menu {
+  position: relative;
+}
+
+.dropdown-submenu {
+  position: absolute;
+  top: 0;
+  left: 100%; /* Show submenu to the right */
+  display: none;
+  min-width: 150px;
+}
+
+.dropdown-item:hover .dropdown-submenu {
+  display: block;
+}
+
+.dropdown-item {
+  padding: 10px;
+}
